// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobTasks /> should render properly with job tasks 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited,
.emotion-3 .noop {
  background-color: #73b61c;
}

.emotion-3:hover,
.emotion-3 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-3[aria-disabled=true],
.emotion-3 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  padding-left: 4px;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-9 {
  height: auto;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-9 tr {
  background-color: #252525;
}

.emotion-9 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-9 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-9 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-9 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-9 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-9 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-9 td {
  max-width: calc(100vw / 4);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-9 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-9 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-10 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-10:nth-of-type(2) {
  width: 100%;
}

.emotion-10:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-15 {
  cursor: pointer;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-17 {
  padding-left: 16px;
}

.emotion-18:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-19 {
  font-style: italic;
}

.emotion-23 {
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <h3
      className="emotion-2"
    >
      Number of 
      Tasks
      : 
      3
    </h3>
    <button
      className="emotion-3"
      onClick={[Function]}
      type="button"
    >
      <div
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#ffffff"
          data-file-name="refresh.svg"
          height={20}
        />
        <div
          className="emotion-6"
        >
          Refresh 
          Tasks
        </div>
      </div>
    </button>
  </div>
  <div
    className="emotion-7"
  >
    <div
      className="emotion-8"
    >
      <table
        className="emotion-9"
      >
        <thead>
          <tr>
            <th
              className="emotion-10"
            >
              State
            </th>
            <th
              className="emotion-10"
            >
              Description
            </th>
            <th
              className="emotion-10"
            >
              Started
            </th>
            <th
              className="emotion-10"
            >
              Duration
            </th>
            <th
              className="emotion-10"
            >
              Errors
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="emotion-15"
            onClick={[Function]}
          >
            <td
              className="emotion-16"
            >
              <svg
                color="#ffffff"
                data-file-name="clock.svg"
                height={20}
              />
              <span
                className="emotion-17"
              >
                Waiting
              </span>
            </td>
            <td>
              <a
                className="emotion-18"
                href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/c812fa09-5f3a-11ea-bb46-6a6895b1a9f6"
                onClick={[Function]}
                onMouseEnter={[Function]}
                title="Expand with 20 assets, 8 processors."
              >
                Expand with 20 assets, 8 processors.
              </a>
            </td>
            <td>
              <div
                className="emotion-19"
              >
                Waiting...
              </div>
            </td>
            <td>
              <div
                className="emotion-19"
              >
                Waiting...
              </div>
            </td>
            <td>
              0
            </td>
          </tr>
          <tr
            className="emotion-15"
            onClick={[Function]}
          >
            <td
              className="emotion-16"
            >
              <svg
                className="emotion-23"
                color="#ebb52e"
                data-file-name="generating.svg"
                height={20}
              />
              <span
                className="emotion-17"
              >
                Running
              </span>
            </td>
            <td>
              <a
                className="emotion-18"
                href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/ea7836f2-44a7-19e1-a67f-1e6fa1f82545"
                onClick={[Function]}
                onMouseEnter={[Function]}
                title="Crawling files in 'gs://zmlp-private-test-data/zorroa-deploy-testdata/zorroa-cypress-testdata/cats/'"
              >
                Crawling files in 'gs://zmlp-private-test-data/zorroa-deploy-testdata/zorroa-cypress-testdata/cats/'
              </a>
            </td>
            <td>
              2020-03-05 23:41:02
            </td>
            <td>
              06h : 42m : 49s
            </td>
            <td>
              0
            </td>
          </tr>
          <tr
            className="emotion-15"
            onClick={[Function]}
          >
            <td
              className="emotion-16"
            >
              <svg
                color="#009f22"
                data-file-name="checkmark.svg"
                height={20}
              />
              <span
                className="emotion-17"
              >
                Success
              </span>
            </td>
            <td>
              <a
                className="emotion-18"
                href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/ea7836f3-44a7-19e1-a67f-1e6fa1f82545"
                onClick={[Function]}
                onMouseEnter={[Function]}
                title="Expand with 15 assets, 8 processors."
              >
                Expand with 15 assets, 8 processors.
              </a>
            </td>
            <td>
              2020-03-05 23:41:55
            </td>
            <td>
              06h : 42m : 49s
            </td>
            <td>
              0
            </td>
          </tr>
          <tr
            className="emotion-15"
            onClick={[Function]}
          >
            <td
              className="emotion-16"
            >
              <svg
                color="#c92300"
                data-file-name="crossSmall.svg"
                height={20}
              />
              <span
                className="emotion-17"
              >
                Failure
              </span>
            </td>
            <td>
              <a
                className="emotion-18"
                href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/c812fa09-5f3a-11ea-bb46-6a6895b1a9f9"
                onClick={[Function]}
                onMouseEnter={[Function]}
                title="Expand with 20 assets, 8 processors."
              >
                Expand with 20 assets, 8 processors.
              </a>
            </td>
            <td>
              2020-03-05 23:41:06
            </td>
            <td>
              06h : 42m : 49s
            </td>
            <td>
              0
            </td>
          </tr>
          <tr
            className="emotion-15"
            onClick={[Function]}
          >
            <td
              className="emotion-16"
            >
              <svg
                color="#808080"
                data-file-name="paused.svg"
                height={20}
              />
              <span
                className="emotion-17"
              >
                Skipped
              </span>
            </td>
            <td>
              <a
                className="emotion-18"
                href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/ea7836f2-44a7-19e1-a67f-1e6fa1f82549"
                onClick={[Function]}
                onMouseEnter={[Function]}
                title="Crawling files in 'gs://zmlp-private-test-data/zorroa-deploy-testdata/zorroa-cypress-testdata/cats/'"
              >
                Crawling files in 'gs://zmlp-private-test-data/zorroa-deploy-testdata/zorroa-cypress-testdata/cats/'
              </a>
            </td>
            <td>
              2020-03-05 23:41:02
            </td>
            <td>
              06h : 42m : 49s
            </td>
            <td>
              0
            </td>
          </tr>
          <tr
            className="emotion-15"
            onClick={[Function]}
          >
            <td
              className="emotion-16"
            >
              <svg
                color="#0074f5"
                data-file-name="squareSquareSquare.svg"
                height={20}
              />
              <span
                className="emotion-17"
              >
                Queued
              </span>
            </td>
            <td>
              <a
                className="emotion-18"
                href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/ea7836f3-44a7-19e1-a67f-1e6fa1f82549"
                onClick={[Function]}
                onMouseEnter={[Function]}
                title="Expand with 15 assets, 8 processors."
              >
                Expand with 15 assets, 8 processors.
              </a>
            </td>
            <td>
              2020-03-05 23:41:55
            </td>
            <td>
              06h : 42m : 49s
            </td>
            <td>
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div>
       
    </div>
    <div>
       
    </div>
  </div>
</div>
`;

exports[`<JobTasks /> should render properly without job tasks 1`] = `
.emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited,
.emotion-3 .noop {
  background-color: #73b61c;
}

.emotion-3:hover,
.emotion-3 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-3[aria-disabled=true],
.emotion-3 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  padding-left: 4px;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-8 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-9 {
  height: 100%;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-9 tr {
  background-color: #252525;
}

.emotion-9 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-9 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-9 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-9 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-9 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-9 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-9 td {
  max-width: calc(100vw / 4);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-9 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-9 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-10 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-10:nth-of-type(2) {
  width: 100%;
}

.emotion-10:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-15 {
  height: 100%;
  pointer-events: none;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 18px;
  line-height: 21px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <h3
      className="emotion-2"
    >
      Number of 
      Tasks
      : 
      0
    </h3>
    <button
      className="emotion-3"
      onClick={[Function]}
      type="button"
    >
      <div
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#ffffff"
          data-file-name="refresh.svg"
          height={20}
        />
        <div
          className="emotion-6"
        >
          Refresh 
          Tasks
        </div>
      </div>
    </button>
  </div>
  <div
    className="emotion-7"
  >
    <div
      className="emotion-8"
    >
      <table
        className="emotion-9"
      >
        <thead>
          <tr>
            <th
              className="emotion-10"
            >
              State
            </th>
            <th
              className="emotion-10"
            >
              Description
            </th>
            <th
              className="emotion-10"
            >
              Started
            </th>
            <th
              className="emotion-10"
            >
              Duration
            </th>
            <th
              className="emotion-10"
            >
              Errors
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="emotion-15"
          >
            <td
              colSpan={5}
            >
              <div
                className="emotion-16"
              >
                <div
                  className="emotion-17"
                >
                  <svg
                    data-file-name="noJobs.svg"
                    width={200}
                  />
                  <div>
                    This job has no tasks.
                  </div>
                  <div>
                    Any new task will appear here.
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
